<resources>
    <string name="app_name">Record</string>

    <!-- logoin -->
    <string name="login_remuber">記住帳密</string>
    <string name="login_auto">自動登入</string>

    <!-- main -->
    <string name="main_cost">成本</string>
    <string name="main_earn">收入</string>
    <string name="main_chart">圖表</string>
    <string name="main_details">明細</string>
    <string name="main_logout">登出</string>

    <!-- earn -->
    <string name="earn_date">日期：</string>
    <string name="earn_option">收入項目：</string>
    <string name="earn_money">金額：</string>
    <string name="earn_note">備註：</string>
    <string name="earn_name">輸入人：</string>
    <string name="earn_check">確定</string>

    <!-- cost -->
    <string name="cost_date">日期：</string>
    <string name="cost_option">支出項目：</string>
    <string name="cost_money">金額：</string>
    <string name="cost_note">備註：</string>
    <string name="cost_name">輸入人：</string>
    <string name="cost_check">確定</string>

    <!-- details -->
    <string name="details_search_date">日期：</string>
    <string name="details_search_year">年</string>
    <string name="details_search_month">月</string>
    <string name="details_item_name">記錄者：</string>
    <string name="details_item_option">項目：</string>
    <string name="details_item_money">金額：</string>
    <string name="details_item_note">備註：</string>
    <string name="details_nodata">尚無資料</string>
    <string name="title_activity_login">Sign in</string>
    <string name="edit_item_update">修改項目</string>
    <string name="edit_item_delect">刪除項目</string>

    <!-- chart -->
    <string name="chart_year">年份：</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
