<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_cost"
    android:layout_width="@dimen/enterdialog_width"
    android:layout_height="@dimen/enterdialog_hight"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/enterdialog_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/enterdialog_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:text="@string/cost_name"
            android:textColor="@color/enterdialog_textcolor" />

        <EditText
            android:id="@+id/dialog_cost_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:background="@color/enterdialog_line_background"
            android:padding="@dimen/enterdialog_line_padding"
            android:textColor="@color/enterdialog_textcolor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:text="@string/cost_date"
            android:textColor="@color/enterdialog_textcolor" />

        <TextView
            android:id="@+id/dialog_cost_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:background="@color/enterdialog_line_background"
            android:padding="@dimen/enterdialog_line_padding"
            android:textColor="@color/enterdialog_textcolor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:text="@string/cost_option"
            android:textColor="@color/enterdialog_textcolor" />

        <Spinner
            android:id="@+id/dialog_cost_option_sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:background="@color/enterdialog_line_background"
            android:padding="@dimen/enterdialog_line_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:text="@string/cost_money"
            android:textColor="@color/enterdialog_textcolor" />

        <EditText
            android:id="@+id/dialog_cost_money"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:inputType="number"
            android:background="@color/enterdialog_line_background"
            android:padding="@dimen/enterdialog_line_padding"
            android:textColor="@color/enterdialog_textcolor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_line_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:text="@string/cost_note"
            android:textColor="@color/enterdialog_textcolor" />

        <EditText
            android:id="@+id/dialog_cost_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_note_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:background="@color/enterdialog_line_background"
            android:padding="@dimen/enterdialog_line_padding"
            android:textColor="@color/enterdialog_textcolor" />

        <Button
            android:id="@+id/dialog_cost_check"
            android:layout_width="match_parent"
            android:layout_height="@dimen/enterdialog_check_hight"
            android:layout_margin="@dimen/enterdialog_line_marign"
            android:text="@string/cost_check"
            android:textColor="@color/enterdialog_textcolor" />

    </LinearLayout>
</LinearLayout>
