<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/view_margin"
    tools:context="feather.record.Context.Details.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_line_marign"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/details_line_marign"
                android:layout_weight="1"
                android:text="@string/details_search_date" />

            <Spinner
                android:id="@+id/details_spinner_year"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:dropDownVerticalOffset="@dimen/details_spinner_drop" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/details_line_marign"
                android:layout_weight="1"
                android:text="@string/details_search_year" />

            <Spinner
                android:id="@+id/details_spinner_month"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:dropDownVerticalOffset="@dimen/details_spinner_drop" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/details_line_marign"
                android:layout_weight="1"
                android:text="@string/details_search_month" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ExpandableListView
                android:id="@+id/details_exlistview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/details_nodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/details_nodata" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
