<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/details_item_marign"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/details_item_marign"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_item_name"/>

                <TextView
                    android:id="@+id/details_item_child_name"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_item_option"/>

                <TextView
                    android:id="@+id/details_item_child_option"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/details_item_marign"
            android:orientation="horizontal">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/details_item_note" />

            <TextView
                android:id="@+id/details_item_child_note"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
